--- a/index.css
+++ b/index.css
@@ -1,24 +1,28 @@
 body {
   text-align: center;
   background-image: url("background.jpg");
+  background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 6rem;
   color: #101010;
   text-shadow: 3px 0 #ff8c00;
 }
 
 button {
-  width: 120px;
-  padding: 5px;
+  width: 150px;
+  padding: 16px 8px;
   font-size: 1rem;
   margin-right: 5px;
-  opacity: 0.8;
-  border-radius: 10px;
+  margin-bottom: 5px;
+  opacity: 0.9;
+  border-radius: 7px;
 }
 
 button:hover {
